@@ -25,6 +25,7 @@ import forge.gui.home.sanctioned.VSubmenuSealed;
 import forge.gui.home.settings.VSubmenuAvatars;
 import forge.gui.home.settings.VSubmenuDownloaders;
 import forge.gui.home.settings.VSubmenuPreferences;
+import forge.gui.home.settings.VSubmenuReleaseNotes;
 import forge.gui.home.variant.VSubmenuArchenemy;
 import forge.gui.home.variant.VSubmenuPlanechase;
 import forge.gui.home.variant.VSubmenuVanguard;
@@ -76,6 +77,7 @@ public enum EDocID { /** */
     HOME_SEALED (VSubmenuSealed.SINGLETON_INSTANCE), /** */
     HOME_VANGUARD (VSubmenuVanguard.SINGLETON_INSTANCE), /** */
     HOME_PLANECHASE (VSubmenuPlanechase.SINGLETON_INSTANCE), /** */
+    HOME_RELEASE_NOTES (VSubmenuReleaseNotes.SINGLETON_INSTANCE),
 
     REPORT_MESSAGE (VMessage.SINGLETON_INSTANCE), /** */
     REPORT_STACK (VStack.SINGLETON_INSTANCE), /** */
